--- a/packages/clay-css/src/scss/variables/_custom-forms.scss
+++ b/packages/clay-css/src/scss/variables/_custom-forms.scss
@@ -224,6 +224,17 @@ $label-custom-control-label: map-deep-merge(
 // .custom-control-label-text
 
 $custom-control-label-text: () !default;
+$custom-control-label-text: map-deep-merge(
+	(
+		display: inline-block,
+		max-width: 100%,
+		padding-left:
+			calc(
+				#{$custom-control-indicator-size} + #{$custom-control-description-padding-left}
+			),
+	),
+	$custom-control-label-text
+);
 
 // .custom-control-label-text small, .custom-control-label-text .small
 
@@ -243,10 +254,6 @@ $custom-control: map-deep-merge(
 		margin-bottom: $custom-control-margin-bottom,
 		margin-top: $custom-control-margin-top,
 		min-height: $custom-control-min-height,
-		padding-left:
-			calc(
-				#{$custom-control-indicator-size} + #{$custom-control-description-padding-left}
-			),
 		position: relative,
 		text-align: left,
 		only-child: (
@@ -254,9 +261,11 @@ $custom-control: map-deep-merge(
 		),
 		label: (
 			cursor: map-get($custom-control-label, cursor),
-			display: inline,
+			display: inline-block,
 			font-size: $font-size-base,
 			margin-bottom: 0,
+			min-height: 1.25rem,
+			min-width: $custom-control-indicator-size,
 		),
 	),
 	$custom-control
